# backend/docs/swagger.yaml
@@ -11,6 +11,11 @@ definitions:
       user:
         type: integer
     type: object
+  controllers.BookEntity:
+    properties:
+      sid:
+        type: integer
+    type: object
   ent.Book:
     properties:
       Author:
@@ -19,8 +24,11 @@ definitions:
       BOOK_NAME:
         description: BOOKNAME holds the value of the "BOOK_NAME" field.
         type: string
-      Status:
-        description: Status holds the value of the "Status" field.
+      CATEGORY:
+        description: CATEGORY holds the value of the "CATEGORY" field.
+        type: string
+      USER_NAME:
+        description: USERNAME holds the value of the "USER_NAME" field.
         type: string
       edges:
         $ref: '#/definitions/ent.BookEdges'
@@ -30,6 +38,8 @@ definitions:
         type: object
       id:
         description: ID of the ent.
+        type: integer
+      status_ID:
         type: integer
     type: object
   ent.BookBorrow:
@@ -75,6 +85,10 @@ definitions:
         items:
           $ref: '#/definitions/ent.BookBorrow'
         type: array
+      status:
+        $ref: '#/definitions/ent.Status'
+        description: Status holds the value of the Status edge.
+        type: object
     type: object
   ent.Purpose:
     properties:
@@ -120,6 +134,29 @@ definitions:
         description: Role holds the value of the role edge.
         items:
           $ref: '#/definitions/ent.User'
+        type: array
+    type: object
+  ent.Status:
+    properties:
+      STATUS_NAME:
+        description: STATUSNAME holds the value of the "STATUS_NAME" field.
+        type: string
+      edges:
+        $ref: '#/definitions/ent.StatusEdges'
+        description: |-
+          Edges holds the relations/edges for other nodes in the graph.
+          The values are being populated by the StatusQuery when eager-loading is set.
+        type: object
+      id:
+        description: ID of the ent.
+        type: integer
+    type: object
+  ent.StatusEdges:
+    properties:
+      status:
+        description: Status holds the value of the status edge.
+        items:
+          $ref: '#/definitions/ent.Book'
         type: array
     type: object
   ent.User:
@@ -456,7 +493,7 @@ paths:
         name: Book
         required: true
         schema:
-          $ref: '#/definitions/ent.Book'
+          $ref: '#/definitions/controllers.BookEntity'
       produces:
       - application/json
       responses:
@@ -775,6 +812,157 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Update a role entity by ID
+  /statuss:
+    get:
+      description: list status entities
+      operationId: list-status
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/ent.Status'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: List status entities
+    post:
+      consumes:
+      - application/json
+      description: Create status
+      operationId: create-status
+      parameters:
+      - description: Status entity
+        in: body
+        name: status
+        required: true
+        schema:
+          $ref: '#/definitions/ent.Status'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Create status
+  /statuss/{id}:
+    delete:
+      description: get status by ID
+      operationId: delete-status
+      parameters:
+      - description: Status ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Delete a status entity by ID
+    get:
+      description: get status by ID
+      operationId: get-status
+      parameters:
+      - description: Status ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get a status entity by ID
+    put:
+      consumes:
+      - application/json
+      description: update status by ID
+      operationId: update-status
+      parameters:
+      - description: Status ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Status entity
+        in: body
+        name: status
+        required: true
+        schema:
+          $ref: '#/definitions/ent.Status'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Update a status entity by ID
   /users:
     get:
       description: list user entities
